# CourseWork

./: .gitignore  AdminMenu.cpp  AdminMenu.h  AdminSystem.cpp  AdminSystem.h  CMakeLists.txt  Course.cpp  Course.h  CourseLink.cpp  CourseLink.h  CourseManager.cpp  CourseManager.h  Database.cpp  Database.h  Display.cpp  Display.h  FileUtils.cpp  FileUtils.h  Link.h  LoginUtils.cpp  LoginUtils.h  README.md  Score.cpp  Score.h  ScoreLink.cpp  ScoreLink.h  ScoreManager.cpp  ScoreManager.h  Student.cpp  Student.h  StudentLink.cpp  StudentLink.h  StudentManager.cpp  StudentManager.h  StudentMenu.cpp  StudentMenu.h  Teacher.cpp  Teacher.h  TeacherLink.cpp  TeacherLink.h  (+10 more)
data/: course.txt  score.txt  student.txt  teacher.txt
